cmake_minimum_required(VERSION 3.13)

set(PluginName PluginODBC)
project(${PluginName})

include(../template.cmake)
CreatePlugin(${PluginName})

set(NANODBC_SRC nanodbc/nanodbc.cpp nanodbcw/nanodbcw.cpp)
set(NANODBC_INC . src ../include ../include/ddbplugin)
BuildDependency(nanodbc NANODBC_SRC NANODBC_INC)
target_compile_definitions(nanodbc PRIVATE NANODBC_ODBC_VERSION=SQL_OV_ODBC3)

if(UNIX)
    find_library(odbc_LIBRARY odbc REQUIRED)
    cmake_path(GET odbc_LIBRARY PARENT_PATH LIBRARY_ROOT)
    cmake_path(GET LIBRARY_ROOT PARENT_PATH LIBRARY_ROOT)
    set(INCLUDE_DIR ${LIBRARY_ROOT}/include)
else()
    target_link_directories(${PluginName} PRIVATE ${CMAKE_BINARY_DIR})
    target_link_libraries(${PluginName} PRIVATE  odbc32 odbccp32)
endif()
target_include_directories(nanodbc PRIVATE ${INCLUDE_DIR})
target_include_directories(${PluginName} PRIVATE ${INCLUDE_DIR})
target_link_libraries(${PluginName} PRIVATE ${odbc_LIBRARY})
target_compile_options(nanodbc PRIVATE -w)